--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h2>Post</h2>
+
 <p>
   <strong>Title:</strong>
   <%= @post.title %>
@@ -9,6 +11,12 @@
   <strong>Body:</strong>
   <%= @post.body %>
 </p>
+
+<h2>Comments</h2>
+<%= render @post.comments %>
+
+<h2>Add a comment to post:</h2>
+<%= render "comments/form" %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
