arreglos del session

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,14 @@
+<h4>
+  <tr aling="rigth">
+    <td>
+      <%= session[:current_user_id] %> 
+    </td>
+    <td>
+      <%= link_to 'Logout', signout_path %>
+    </td>
+  </tr>
+<h4>
+
 <h1>Listing posts</h1>
 
 <table>
