--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :email %>
   </p>
   <p>
-    <%= f.label :password_hash %><br>
+    <%= f.label :password %><br>
     <%= f.password_field :password_hash %>
   </p>
   <p>
