Agregado del email y logout en la aplicación

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,23 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <h5>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
+  </h5>
+
+  <% if session[:current_user_id] %>
+    <h5 align="right">
+      <%= session[:current_user_email] %> 
+      <br>
+      <%= link_to 'Logout', signout_path %>
+    <h5>
+  <% end %>
+
 </head>
 <body>
-<h5>
-  <% flash.each do |name, msg| %>
-    <%= content_tag :div, msg, :id => "flash_#{name}" %>
-  <% end %>
-</h5>
 
 <%= yield %>
 
